exported the final model as a pickle file

--- a/notebooks/train-model.ipynb
+++ b/notebooks/train-model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e41a4351",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,24 @@
     "from pathlib import Path\n",
     "from sklearn.model_selection import ShuffleSplit\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import cross_val_score"
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
+   "id": "7da2c467",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "1e2b8e77",
    "metadata": {},
    "outputs": [],
@@ -28,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d24f880a",
    "metadata": {},
    "outputs": [],
@@ -38,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "48617523",
    "metadata": {},
    "outputs": [],
@@ -49,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "663f5f23",
    "metadata": {},
    "outputs": [
@@ -262,7 +274,7 @@
        "[5 rows x 245 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "740bc790",
    "metadata": {},
    "outputs": [
@@ -283,7 +295,7 @@
        "(7251, 245)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b6ae1d3a",
    "metadata": {},
    "outputs": [
@@ -507,7 +519,7 @@
        "[5 rows x 244 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "cf44b5d0",
    "metadata": {},
    "outputs": [
@@ -529,7 +541,7 @@
        "(7251, 244)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "8eaca4a8",
    "metadata": {},
    "outputs": [
@@ -553,7 +565,7 @@
        "Name: price, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "74c7bb7c",
    "metadata": {},
    "outputs": [
@@ -575,7 +587,7 @@
        "7251"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "574a13eb",
    "metadata": {},
    "outputs": [
@@ -604,14 +616,17 @@
        "0.8452277697874374"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reg_score = train_model(X,y,0.2,10)\n",
-    "reg_score"
+    "\n",
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2,random_state=10)\n",
+    "reg = LinearRegression()\n",
+    "reg.fit(X_train,y_train)\n",
+    "reg.score(X_test,y_test) \n"
    ]
   },
   {
@@ -624,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "e8e877e2",
    "metadata": {},
    "outputs": [
@@ -634,7 +649,7 @@
        "array([0.82430186, 0.77166234, 0.85089567, 0.80837764, 0.83653286])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "37081935",
    "metadata": {},
    "outputs": [
@@ -692,10 +707,10 @@
       "    raise InvalidParameterError(\n",
       "    ...<2 lines>...\n",
       "    )\n",
-      "sklearn.utils._param_validation.InvalidParameterError: The 'criterion' parameter of DecisionTreeRegressor must be a str among {'friedman_mse', 'squared_error', 'poisson', 'absolute_error'}. Got 'mse' instead.\n",
+      "sklearn.utils._param_validation.InvalidParameterError: The 'criterion' parameter of DecisionTreeRegressor must be a str among {'absolute_error', 'poisson', 'squared_error', 'friedman_mse'}. Got 'mse' instead.\n",
       "\n",
       "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-      "c:\\House_Price_Prediction_EndToEnd\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1135: UserWarning: One or more of the test scores are non-finite: [       nan        nan 0.71700589 0.70653045]\n",
+      "c:\\House_Price_Prediction_EndToEnd\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1135: UserWarning: One or more of the test scores are non-finite: [       nan        nan 0.71311004 0.71199187]\n",
       "  warnings.warn(\n"
      ]
     },
@@ -735,13 +750,13 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>lasso</td>\n",
-       "      <td>0.687429</td>\n",
-       "      <td>{'alpha': 1, 'selection': 'cyclic'}</td>\n",
+       "      <td>0.687562</td>\n",
+       "      <td>{'alpha': 1, 'selection': 'random'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>decision_tree</td>\n",
-       "      <td>0.717006</td>\n",
+       "      <td>0.713110</td>\n",
        "      <td>{'criterion': 'friedman_mse', 'splitter': 'best'}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -751,16 +766,16 @@
       "text/plain": [
        "               model  best_score  \\\n",
        "0  linear_regression    0.819001   \n",
-       "1              lasso    0.687429   \n",
-       "2      decision_tree    0.717006   \n",
+       "1              lasso    0.687562   \n",
+       "2      decision_tree    0.713110   \n",
        "\n",
        "                                         best_params  \n",
        "0                           {'fit_intercept': False}  \n",
-       "1                {'alpha': 1, 'selection': 'cyclic'}  \n",
+       "1                {'alpha': 1, 'selection': 'random'}  \n",
        "2  {'criterion': 'friedman_mse', 'splitter': 'best'}  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,6 +790,37 @@
    "metadata": {},
    "source": [
     "Based on above results we can say that LinearRegression gives the best score. Hence we will use that"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2968fbf1",
+   "metadata": {},
+   "source": [
+    "Now we will export the trained model as a pickle file to models directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b35e4c5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models_dir = r\"C:\\House_Price_Prediction_EndToEnd\\models\"  \n",
+    "model_filename = \"reg_model.pkl\"\n",
+    "model_path = f\"{models_dir}/{model_filename}\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2d4b48a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(model_path, 'wb') as file:  \n",
+    "    pickle.dump(reg, file)"
    ]
   }
  ],
